[metadata]
name = daist
version = attr: daist.__version__
description = Determined AI scalability testing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/determined-ai/determined/tree/main/performance
project_urls =
    Bug Tracker = https://hpe-aiatscale.atlassian.net/jira/software/projects/SCALE/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    determined
    jsonschema
    locust
    matplotlib
    numpy
    packaging
    prettytable
    psycopg2-binary
    requests

[options.extras_require]
BUILD =
    build
    setuptools
    wheel

[options.packages.find]
where = .

exclude =
    uts*

[options.package_data]
daist =
    config.d/*
